修改文章关键词
Took 22 seconds

--- a/_posts/2018-07-20-Scala 类型系统02.md
+++ b/_posts/2018-07-20-Scala 类型系统02.md
@@ -2,7 +2,7 @@
 layout: post
 title:  Scala 类型系统02：抽象类型
 date:   2018-07-20
-tags: scala 教程
+tags: scala 笔记
 color: rgb(255,90,90)
 ---
 > 参数化类型在静态的，面向对象的语言中很常见。除了参数化类型，Scala 还支持抽象类型，这在函数式语言中很常见。
