--- a/_posts/2019-08-04-新的工作台.md
+++ b/_posts/2019-08-04-新的工作台.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "新的工作台"
 date: 2019-08-04 14:05:21 +0800
-tags: 生活
+tags: 日常
 color: rgb(230,194,116)
 cover: 'http://ww2.sinaimg.cn/large/006tNc79ly1g5o2gwti8vj31400u07wj.jpg'
 # subtitle: 新的工作台
