--- a/_posts/2021-03-28-ReShade.md
+++ b/_posts/2021-03-28-ReShade.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 用 ReShade 模拟为 RM 游戏加点料
+title: 用 ReShade 为 RM 游戏加点料
 date: 2021-03-28
 tags: 插件 教程
 color: rgb(198,138,116)
